Fix side views and overlay position when scrolled down in main view on mobile.

--- a/app/gelato/styles/application.scss
+++ b/app/gelato/styles/application.scss
@@ -45,7 +45,7 @@ html, body {
 }
 
 #main-app-container-overlay {
-  position: absolute;
+  position: fixed;
   top: 50px;
   bottom: 0;
   width: 100%;
@@ -74,7 +74,7 @@ html, body {
 }
 
 #left-side-app-container {
-  position: absolute;
+  position: fixed;
   transition: transform .25s ease-out;
   -webkit-transition: -webkit-transform .25s ease-out;
   transform: translate3d(-100%, 0, 0);
@@ -83,6 +83,7 @@ html, body {
 }
 
 #right-side-app-container {
+  position: fixed;
   transition: transform .25s ease-out;
   -webkit-transition: -webkit-transform .25s ease-out;
   transform: translate3d(112%, 0, 0);
